Fixes error messages getting cut off by the background image

--- a/src/sass/page-template-styles.scss
+++ b/src/sass/page-template-styles.scss
@@ -627,6 +627,14 @@
     }
   }
 
+  /* Fixes error messages getting cut off */
+  /* Screenshot: https://cln.sh/TMt6jqym */
+  .en__errorHeader,
+  .en__errorList {
+    z-index: 1;
+    position: inherit;
+  }
+
   input[type="checkbox"] + label:before {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
       sans-serif;
